--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@ h1 {
 button {
     padding: 20px;
     border: 1px black;
-    background-color: #38A9AF;
+    background-color: orange;
     color: #ffffff;
     font-size: 18px;
     text-transform: uppercase;
